--- a/GoodFood/Search/View/SearchCell.xib
+++ b/GoodFood/Search/View/SearchCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,17 +26,17 @@
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="110" id="A51-wP-H18"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="ERs-IC-ygd">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ERs-IC-ygd">
                                 <rect key="frame" x="118" y="0.0" width="222" height="111"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5B-ma-dgu">
-                                        <rect key="frame" x="0.0" y="0.0" width="222" height="24"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="222" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сложность" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2zL-hr-kGZ">
-                                        <rect key="frame" x="0.0" y="33" width="222" height="20"/>
+                                        <rect key="frame" x="0.0" y="35" width="222" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="7Fc-eJ-MPU"/>
                                         </constraints>
@@ -44,7 +45,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Время" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUY-ob-8H2">
-                                        <rect key="frame" x="0.0" y="62" width="222" height="20"/>
+                                        <rect key="frame" x="0.0" y="60" width="222" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="0El-I0-1we"/>
                                         </constraints>
@@ -52,15 +53,30 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPI-sq-Qef">
-                                        <rect key="frame" x="0.0" y="91" width="222" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="WPS-6c-Lai"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HE7-hA-aH5" customClass="CosmosView" customModule="Cosmos">
+                                        <rect key="frame" x="0.0" y="85" width="222" height="26"/>
+                                        <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
+                                                <color key="value" red="0.99942404029999998" green="0.76693200080000001" blue="0.035401394090000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="emptyColor">
+                                                <color key="value" systemColor="tertiarySystemBackgroundColor"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="emptyBorderColor">
+                                                <color key="value" systemColor="systemGrayColor"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="rating">
+                                                <real key="value" value="3"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="starSize">
+                                                <real key="value" value="25"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="totalStars">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -81,10 +97,18 @@
                 <outlet property="difficulty" destination="2zL-hr-kGZ" id="9By-l6-SdO"/>
                 <outlet property="imageOfDish" destination="QIj-Yc-UUs" id="LpS-qT-DPB"/>
                 <outlet property="name" destination="c5B-ma-dgu" id="Db9-DZ-apA"/>
-                <outlet property="rating" destination="LPI-sq-Qef" id="Xgy-s2-yWV"/>
+                <outlet property="rating" destination="HE7-hA-aH5" id="71T-2w-gol"/>
                 <outlet property="time" destination="VUY-ob-8H2" id="2tn-u0-tXD"/>
             </connections>
             <point key="canvasLocation" x="95.652173913043484" y="98.4375"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tertiarySystemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
