--- a/GoodFood/Application/Base.lproj/Main.storyboard
+++ b/GoodFood/Application/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IuL-kT-afa">
-    <device id="retina6_1" orientation="portrait" appearance="dark"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -69,13 +69,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vXh-VR-3Ic">
-                                <rect key="frame" x="0.0" y="349" width="414" height="464"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="vXh-VR-3Ic">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
                                 <color key="tintColor" systemColor="tertiarySystemBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" systemColor="tertiarySystemBackgroundColor"/>
+                                <color key="sectionIndexTrackingBackgroundColor" systemColor="tertiarySystemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DishCell" id="lEu-Z0-7P5" customClass="DishCell" customModule="GoodFood" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="24"/>
+                                        <rect key="frame" x="0.0" y="49.5" width="414" height="24"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lEu-Z0-7P5" id="hge-4z-9dW">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="24"/>
@@ -117,34 +119,15 @@
                                 </prototypes>
                                 <sections/>
                             </tableView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YP7-q6-l3n">
-                                <rect key="frame" x="0.0" y="88" width="414" height="253"/>
-                                <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="253" id="ixB-Em-OTM"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ингредиенты" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IsA-w6-Shq">
-                                <rect key="frame" x="4" y="311" width="390" height="21"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="npC-Hu-aLj"/>
                         <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
+                        <color key="tintColor" systemColor="tertiarySystemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="YP7-q6-l3n" firstAttribute="top" secondItem="npC-Hu-aLj" secondAttribute="top" id="3q2-99-BE4"/>
-                            <constraint firstItem="npC-Hu-aLj" firstAttribute="trailing" secondItem="IsA-w6-Shq" secondAttribute="trailing" constant="20" id="9pf-Zc-EJx"/>
                             <constraint firstItem="vXh-VR-3Ic" firstAttribute="leading" secondItem="npC-Hu-aLj" secondAttribute="leading" id="Dbp-Tg-7xL"/>
-                            <constraint firstItem="YP7-q6-l3n" firstAttribute="leading" secondItem="npC-Hu-aLj" secondAttribute="leading" id="Fc6-t5-0Bp"/>
-                            <constraint firstItem="YP7-q6-l3n" firstAttribute="trailing" secondItem="npC-Hu-aLj" secondAttribute="trailing" id="POs-Ic-zpw"/>
-                            <constraint firstItem="vXh-VR-3Ic" firstAttribute="top" secondItem="IsA-w6-Shq" secondAttribute="bottom" constant="17" id="TJi-Yk-ujg"/>
                             <constraint firstItem="vXh-VR-3Ic" firstAttribute="bottom" secondItem="npC-Hu-aLj" secondAttribute="bottom" id="f35-mM-91s"/>
+                            <constraint firstItem="vXh-VR-3Ic" firstAttribute="top" secondItem="npC-Hu-aLj" secondAttribute="top" id="foP-6G-zcN"/>
                             <constraint firstItem="vXh-VR-3Ic" firstAttribute="trailing" secondItem="npC-Hu-aLj" secondAttribute="trailing" id="hPN-vo-aAg"/>
-                            <constraint firstItem="IsA-w6-Shq" firstAttribute="leading" secondItem="npC-Hu-aLj" secondAttribute="leading" constant="4" id="i16-NH-Jyc"/>
-                            <constraint firstItem="IsA-w6-Shq" firstAttribute="top" secondItem="npC-Hu-aLj" secondAttribute="top" constant="223" id="sFY-NI-ThT"/>
-                            <constraint firstItem="vXh-VR-3Ic" firstAttribute="top" secondItem="YP7-q6-l3n" secondAttribute="bottom" constant="8" symbolic="YES" id="sh3-8q-Oxh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kqD-o0-7Wa">
@@ -161,7 +144,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="dishImage" destination="YP7-q6-l3n" id="oHk-8f-nx3"/>
                         <outlet property="dishTableView" destination="vXh-VR-3Ic" id="fBV-A9-ivZ"/>
                         <outlet property="likedButton" destination="hd7-5Q-XWk" id="uKG-30-ptd"/>
                         <segue destination="K2S-av-I35" kind="show" identifier="CookingSegue" id="dFR-2n-sHV"/>
@@ -184,20 +166,21 @@
                                 <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
                                 <color key="tintColor" systemColor="tertiarySystemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StepCell" rowHeight="117.5" id="Wn3-55-9Vx" customClass="StepCell" customModule="GoodFood" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="117.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StepCell" rowHeight="118" id="Wn3-55-9Vx" customClass="StepCell" customModule="GoodFood" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="118"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wn3-55-9Vx" id="OVX-dg-NwV">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="117.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="118"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="WJw-vm-MYI">
-                                                    <rect key="frame" x="10" y="10" width="394" height="97.5"/>
+                                                    <rect key="frame" x="10" y="10" width="394" height="98"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l2Y-ww-VG8">
                                                             <rect key="frame" x="0.0" y="0.0" width="150" height="97"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="150" id="IaY-AJ-wfe"/>
+                                                                <constraint firstAttribute="height" constant="97" id="qKv-DB-rt2"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsM-HU-hA7">
@@ -208,9 +191,6 @@
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="97.5" id="Ds1-6k-2Hu"/>
-                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
@@ -650,8 +630,13 @@
             <point key="canvasLocation" x="516" y="2671"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="uws-W8-pBr">
+            <size key="intrinsicContentSize" width="145" height="25"/>
+        </designable>
+    </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="NqP-jh-Igh"/>
+        <segue reference="Ug9-d2-aeS"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Camera" width="22" height="18"/>
